--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
